# beimeng_workspace

./: .ci-test  .commitlintrc.json  .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TemuWebPanel.spec  TemuWebPanelInstaller.spec  bandit-report.json  codecov.yml  first_edit_dialog_codegen_release.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  temp_pc.txt
.ai/: context.json
.ai/prompts/: code_review.md  create_component.md
.ai/schemas/: component.schema.json  context.schema.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-automation.yml  release.yml  security.yml
.venv_win/: pyvenv.cfg
.venv_win/Scripts/: activate  activate.bat
apps/cli/hello/: .ai.json  README.md  __init__.py  __main__.py  main.py
apps/temu-auto-publish/: .ai.json  .dockerignore  .env.bak  .env.bak2  .env.example  AI_SETUP_GUIDE.md  BATCH_EDIT_ANALYSIS.md  BUG_FIX_REPORT.md  CODEGEN_GUIDE.md  Dockerfile  Dockerfile.debug  Dockerfile.windows  ENV_CONFIG.md  FAULT_TOLERANCE_SUMMARY.md  FIX_SUMMARY.md  INTEGRATION_TEST_REPORT.md  PROGRESS.md  QUICKREF_10月品.md  QUICKSTART.md  QUICK_WORKFLOW_SUMMARY.md  README-PRODUCTION.md  README.md  READY_TO_TEST.md  REAL_TEST_REPORT.md  SELECTOR_PROGRESS.md  SMART_LOCATOR_SOLUTION.md  SOTA_FINAL_REPORT.md  SOTA_IMPLEMENTATION_REPORT.md  STAGE1_COMPLETION_REPORT.md  STAGE1_VALIDATION_SUCCESS.md  STAGE2_TASK1_REPORT.md  STAGE2_TASK2_PROGRESS.md  STRATEGY_COMPARISON.md  TESTING.md  TESTING_SUMMARY.md  TEST_SETUP_COMPLETE.md  TITLE_FIELD_FIX.md  TemuWebPanel.spec  VALIDATION_GUIDE.md  VALIDATION_README.md  (+35 more)
apps/temu-auto-publish-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  requirements.txt
apps/temu-auto-publish-server/app/: __init__.py  main.py
apps/temu-auto-publish/benchmarks/: __init__.py  benchmark_optimization.py  results.json
apps/temu-auto-publish/cli/: __init__.py  main.py
apps/temu-auto-publish/codegen/: batch_edit_codegen.py
apps/temu-auto-publish/config/: .ai.json  __init__.py  browser_config.json  collection_selectors.json  data_sources.json  first_edit_selectors_v3.json  miaoshou_selectors.json  miaoshou_selectors_batch_edit.json  miaoshou_selectors_v2.json  notification.yaml.template  production.yaml  settings.py  yingdao_config.json
apps/temu-auto-publish/data/: README.md
apps/temu-auto-publish/debug/: batch_edit_page_source.html  search_area.html
apps/temu-auto-publish/docker/: README.md  build-exe.bat  docker-start.bat  docker-start.sh  entrypoint-debug.sh
apps/temu-auto-publish/docs/: AI_TITLE_GENERATION.md  BATCH_EDIT_SUCCESS.md  COLLECTION.md  COMPLETE_WORKFLOW.md  DEBUG_GUIDE.md  DEBUG_MODE.md  DOCKER.md  FIRST_EDIT_MIGRATION.md  FIRST_EDIT_MIGRATION_GUIDE.md  SELECTION_FORMAT.md  STATE_DETECTOR_GUIDE.md  数据管理与图片信息提取总结.md
apps/temu-auto-publish/examples/: __init__.py  basic_workflow.py  demo_quick_workflow.py  first_edit_sync_debug.py  run_business_demo.py  test_env.py  test_playwright.py  test_stealth.py  test_stealth_auto.py
apps/temu-auto-publish/installer/: README.md  build_all.bat  build_portable.py  install_temu_web_panel.py  installer.iss
apps/temu-auto-publish/playwright-recordings/: claim.spec.ts  miaoshou-storage.json
apps/temu-auto-publish/scripts/: __init__.py  build_app.py  build_installer.py  build_windows_exe.py  capture_batch_edit_api.py  capture_claim_filter_api.py  capture_first_edit_api.py  capture_first_edit_upload_api.py  capture_upload_request.py  captured_claim_filter_api.json  debug_batch_edit_api.py  debug_dom.py  debug_origin_page.py  debug_packaging_page.py  download_videos.py  export_temu_cookies.py  format_product_excel.py  format_selection_table.py  inspect_page_source.py  run_integration_tests.py  run_production.py  run_until_empty.py  scheduler_daemon.py  start_web_panel_entry.py  (+17 more)
architecture/structure/: index.html
data/checkpoints/: temu_publish_20251130_212545.json  temu_publish_20251130_213444.json  temu_publish_20251130_222634.json  temu_publish_20251130_223505.json  temu_publish_20251130_224022.json  temu_publish_20251130_224718.json  temu_publish_20251130_225515.json  temu_publish_20251130_235310.json  temu_publish_20251201_000733.json  temu_publish_20251201_002403.json  temu_publish_20251201_004947.json  temu_publish_20251201_145242.json  temu_publish_20251201_145753.json  temu_publish_20251201_150546.json  temu_publish_20251201_162253.json  temu_publish_20251201_162908.json  temu_publish_20251201_203720.json
data/metrics/: temu_publish_20251130_212545.json  temu_publish_20251130_222634.json  temu_publish_20251130_224022.json  temu_publish_20251130_224718.json  temu_publish_20251130_225515.json  temu_publish_20251130_235310.json  temu_publish_20251201_000733.json  temu_publish_20251201_002403.json  temu_publish_20251201_004350.json  temu_publish_20251201_004947.json  temu_publish_20251201_145753.json  temu_publish_20251201_150546.json  temu_publish_20251201_151705.json  temu_publish_20251201_152912.json  temu_publish_20251201_154651.json  temu_publish_20251201_155452.json  temu_publish_20251201_160534.json  temu_publish_20251201_162253.json  temu_publish_20251201_162908.json  temu_publish_20251201_165811.json  temu_publish_20251201_171401.json  temu_publish_20251201_173037.json
docs/: index.md
docs/architecture/: structure.md
docs/guides/: ai-development.md  quickstart.md
docs/templates/: .ai.template.json  README.template.md
guides/ai-development/: index.html
guides/quickstart/: index.html
projects/temu-auto-publish/: index.html
scripts/temu_claim_airtest/: .ai.json  README.md  launcher.py
scripts/tools/: update_ai_context.py
search/: search_index.json
tests/: conftest.py  test_config_and_common.py  test_env_settings.py  test_naming_conventions.py  test_project_structure.py  test_web_panel.py  test_web_panel_api_extras.py  test_web_panel_cli.py  test_web_panel_service.py  test_web_panel_table_editor.py
tests/utils/: __init__.py  project_scanner.py
(+854 files in other folders)
